Feat: US-01 Register new request